; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_parse_file.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_parse_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CONFIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"[config] Loading default config.\0A\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"[config] loading config from: %s.\0A\00", align 1
@.str.2 = private unnamed_addr constant [45 x i8] c"[config] couldn't find config at path: \22%s\22\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @config_parse_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = load i32, i32* @RARCH_PATH_CONFIG, align 4
  %8 = call i64 @path_is_empty(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (i8*, ...) @RARCH_LOG(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i32, i32* @RARCH_PATH_CONFIG, align 4
  %14 = call i8* @path_get(i32 %13)
  store i8* %14, i8** %4, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 (i8*, ...) @RARCH_LOG(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 (...) @config_get_ptr()
  %20 = call i32 @config_load_file(i32* %17, i8* %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %12
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0), i8* %23)
  br label %25

25:                                               ; preds = %22, %12
  ret void
}

declare dso_local i64 @path_is_empty(i32) #1

declare dso_local i32 @RARCH_LOG(i8*, ...) #1

declare dso_local i8* @path_get(i32) #1

declare dso_local i32 @config_load_file(i32*, i8*, i32) #1

declare dso_local i32 @config_get_ptr(...) #1

declare dso_local i32 @RARCH_ERR(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
